[gd_scene load_steps=7 format=2]

[ext_resource path="res://deatch_particles.gd" type="Script" id=1]
[ext_resource path="res://assets/bones sprites/bone.png" type="Texture" id=2]
[ext_resource path="res://assets/bones sprites/head.png" type="Texture" id=3]
[ext_resource path="res://assets/bones sprites/hat.png" type="Texture" id=4]
[ext_resource path="res://assets/bones sprites/foot.png" type="Texture" id=5]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 0.98
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 56.05
flatness = 0.07
gravity = Vector3( 0, 98, 0 )
initial_velocity = 130.0
initial_velocity_random = 0.59
angular_velocity = 3.99
angular_velocity_random = 0.66
orbit_velocity = 0.0
orbit_velocity_random = 0.49
angle = 429.9
angle_random = 1.0

[node name="death_part" type="Node2D"]
script = ExtResource( 1 )

[node name="bones_part" type="Particles2D" parent="."]
emitting = false
amount = 12
lifetime = 5.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="hat_part" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="feet_part" type="Particles2D" parent="."]
emitting = false
amount = 2
lifetime = 5.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 1 )
texture = ExtResource( 5 )

[node name="skull_part" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 1 )
texture = ExtResource( 3 )
